--- a/home.html
+++ b/home.html
@@ -79,6 +79,12 @@
 		<th>Title</th>
 	  </tr>
 	  <tr>
+		  <td><img src="Making/misc1/thumbnail.jpg" style="width:50px;height:50px;"></td>
+	    <td>2025-03-28</td>
+		<td><a href="Making/home.html">Making</a></td>
+		<td><a href="Making/misc1/misc1.html">MISC1 - A MIDI foot manual made of staplers and chipboard, and powered by an Arduino.</a></td>
+	  </tr>
+	  <tr>
 		  <td><img src="Music/RPM2025/RPM2025.png" alt="Magical Murderers Making Hilarious Decisions cover" style="width:50px;height:50px;"></td>
 	    <td>2025-02-28</td>
 		<td><a href="Music/home.html">Music</a></td>
@@ -194,7 +200,7 @@ I do not plan on switching to a website supplier/designer such as Squarespace, b
 AI is trash and shouldn't be used for anything creative. That's for the humans to do.</p>
 
 <hr>
-Last updated 2025-07-26
+Last updated 2025-10-05
 </body>
 </html>
 
