--- a/Making/home.html
+++ b/Making/home.html
@@ -49,7 +49,7 @@
 <br>
 
 <div id="grid">
-	<a href="misc1/misc1.html" class="img" style="background-image: url(misc1/thumbnail.jpg)" title="MISC1, another MIDI Foot Manual. This time, made of staplers."></a>
+	<a href="misc1/MISC1.html" class="img" style="background-image: url(misc1/thumbnail.jpg)" title="MISC1, another MIDI Foot Manual. This time, made of staplers."></a>
 	<a href="f2fPlusPot/f2fPlusPot.html" class="img" style="background-image: url(f2fPlusPot/thumbnail.jpg)" title="Portable Volume Knob - a female-to-female 3.5mm audio connector with a volume knob"></a>
 	<a href="GlowLamp/glowLamp.html" class="img" style="background-image: url(GlowLamp/thumbnail.png)" title="Glow Lamp - a cheery night-light powered by an Arduino"></a>
 	<a href="moop1/moop1.html" class="img" style="background-image: url(moop1/thumbnail.jpg)" title="MOOP1, a MIDI Foot Manual - watch your back, Geddy Lee"></a>
@@ -61,7 +61,7 @@
  </div>
 
 <hr>
-Last updated 2025-10-05
+Last updated 2025-10-06
 </body>
 </html>
 
