--- a/Making/misc1/MISC1.html
+++ b/Making/misc1/MISC1.html
@@ -45,7 +45,7 @@
 
 <h4 style="text-align:center;">Hardware 2: Enclosure</h4>
 
-<img src="10readyToCut.jpg" title="The different parts to cut sketched out on the wood"></img>
+<img src="10ReadyToCut.jpg" title="The different parts to cut sketched out on the wood"></img>
 
 <p style="text-align:center;">Made of the cheapest chipboard I could buy, because funds are limited and the only way to justify a stapler foot manual is to go 'hey, at least it's cheaper than...'. I had the foresight to include a handle in the design, after noting that MOOP1 is difficult to pick up- this ended up being one of my favourite parts of the finished instrument. The whole thing is just about held together with wood glue and screws. No particular joinery to speak of- don't tell my DT teachers.</p>
 
